--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,4 @@ data/student-mat.csv
 data/student-por.csv
 data/student.txt
 data/student-merge.R
-
+Student Performance Analysis and Classification.ipynb
