--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ data/student-por.csv
 data/student.txt
 data/student-merge.R
 Student Performance Analysis and Classification.ipynb
+Student-Performance-Prediction-master
+Student-Performance-Classification-Analysis-master
